Optimize pubsub service and update documentation